Fixed mobile navbar layout issue

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -449,7 +449,7 @@ body > #root{
                 margin-left: 5%;
             } 
             .nav-user {
-                margin-right: 2%;
+                padding: 0;
                 font-size: 16px; 
                 img {
                     width: 30px;
